Changed the build configuration to fix SonarScanner not being able to build